moved css, fixed button, testimonial added

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -2,7 +2,7 @@
   <div class="masthead-content">
     <div class="container">
       <h1 class="masthead-heading mb-0">Home Fetch</h1>
-      <h2 id="form-search" class="masthead-subheading mb-0">For both tenant and landlord</h2>
+      <p id="form-search" class="masthead-subheading mb-0">Renting and Residency Made Easy.</p>
       <form class="">
         <input id="input-search" class="form-control w-50 mx-auto" type="text" placeholder="Search" aria-label="Search">
       </form>
