Home Page Design Changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 <app-text-variation></app-text-variation>
 
-<app-gallery></app-gallery>
+<app-location></app-location>
 
 
 <app-bot-footer></app-bot-footer>
