--- a/src/app/for-tl/for-tl.component.css
+++ b/src/app/for-tl/for-tl.component.css
@@ -20,7 +20,7 @@
 }
 
 .landlord-heading {
-  font-size: 24px;
+  font-size: 22px;
   color: #db2d8e;
 }
 
@@ -31,9 +31,9 @@
 }
 
 #testimonial {
-  background-image: url("../../assets/img/testimonial.jpg");
+  background-image: url("../../assets/img/testimonial2.jpg");
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: top;
   background-attachment: scroll;
   background-size: cover;
   height: 700px;
@@ -42,7 +42,7 @@
 #testimonial2 {
   background-image: url("../../assets/img/testimonial.jpg");
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: bottom;
   background-attachment: scroll;
   background-size: cover;
   height: 700px;
@@ -50,8 +50,30 @@
 
 #testimonial-description{
   padding-top: 250px;
+  margin-left: 80px;
+  width: 650px;
+  max-width: calc(100% - 160px);
 }
 
 .container-fluid {
   padding: 0;
+}
+
+.testimonial-header {
+  font-size: 3rem;
+  color: white;
+}
+
+.testimonial-body {
+  color: white;
+  font-size: 20px;
+  width: 500px;
+  margin: 40px 0;
+  max-width: 100% - 160px;
+}
+
+.call-to-action {
+  padding: 17px;
+  background-image: linear-gradient(105deg, #2879cc 0%, #db2d83 100%);
+  border: none;
 }
