--- a/src/app/for-tl/for-tl.component.html
+++ b/src/app/for-tl/for-tl.component.html
@@ -83,19 +83,16 @@
 
     <div class="container-fluid px-0 .full-background for-tl-testimonial" id="testimonial">
       <div id="testimonial-description">
-        <h2 class="display-4">This is Suzie, She just booked her new home</h2>
-        <p>"I needed a place for relatively low price. Home Fetch helped me find a perfect home with minimal budget!"</p>
+        <p class="display-4 testimonial-header">This is Suzie. She just booked her new home</p>
+        <p class="testimonial-body">"I was looking for a place for ages. Then I discovered HomeFetch. Within one week I found my new home!"</p>
+        <button class = "btn btn-primary call-to-action" type = "button" name="button">Find the Perfect Place</button>
       </div>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="position: absolute;">
-      <path fill="#ffffff" fill-opacity="1"
-        d="M0,64L60,90.7C120,117,240,171,360,160C480,149,600,75,720,69.3C840,64,960,128,1080,154.7C1200,181,1320,171,1380,165.3L1440,160L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path>
-    </svg>
 
     <div class="container-fluid px-0 .full-background for-tl-testimonial2" id="testimonial2">
       <div id="testimonial-description">
-        <h2 class="display-4">This is Alex. He just booked his new home.</h2>
-        <p>"I was looking for a new apartment for ages, but as soon as I found Home Fetch, the decision was instant."</p>
-        <button class = "btn btn-primary call-to-action" type = "button" name="button">Find the Perfect Place</button>
+        <p class="display-4 testimonial-header">This is Alex. His place is rented 95% of the time.</p>
+        <p class="testimonial-body">"I’m renting out my little apartment in Berlin for €917 a month. On HomeFetch, it’s almost always booked. I love that I am 100% in control of the rental, but have 100% support if I need it!."</p>
+        <button class = "btn btn-primary call-to-action" type = "button" name="button">Rent Out Like Alex Now</button>
       </div>
     </div>
